feat: Character Retrieval Workflow